--- a/Move.toml
+++ b/Move.toml
@@ -6,6 +6,6 @@ version = "0.0.0"
 marketplace = "_"
 
 [dependencies]
-AptosFramework = { local = "../../framework/aptos-framework" }
-AptosToken = { local = "../../framework/aptos-token" }
-AptosTokenObjects = { local = "../../framework/aptos-token-objects" }
+AptosFramework = { git = "https://github.com/aptos-labs/aptos-core.git",rev="mainnet",subdir="aptos-move/framework/aptos-framework"}
+AptosToken = { git = "https://github.com/aptos-labs/aptos-core.git",rev="mainnet",subdir="aptos-move/framework/aptos-token"}
+AptosTokenObjects = { git = "https://github.com/aptos-labs/aptos-core.git",rev="mainnet",subdir="aptos-move/framework/aptos-token-objects"}
