--- a/Move.toml
+++ b/Move.toml
@@ -3,7 +3,7 @@ name = "Marketplace"
 version = "0.0.0"
 
 [addresses]
-marketplace = ""
+marketplace = "_"
 [dependencies]
 AptosFramework = { git = "https://github.com/aptos-labs/aptos-core.git",rev="mainnet",subdir="aptos-move/framework/aptos-framework"}
 AptosToken = { git = "https://github.com/aptos-labs/aptos-core.git",rev="mainnet",subdir="aptos-move/framework/aptos-token"}
